--- a/L4/style.css
+++ b/L4/style.css
@@ -4,9 +4,13 @@
     box-sizing: border-box;
 }
 
+/* สำคัญมาก */
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
-    width: 100vw;
-    height: 100vh;
     overflow: hidden;
 }
 
@@ -17,13 +21,17 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    width: 100vw;
+    height: 100vh;
     z-index: 1;
 }
 
+/* บังคับให้รูปทุกช่องสัดส่วนเท่ากัน */
 .background img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    display: block;
     cursor: pointer;
 }
 
@@ -40,9 +48,9 @@ body {
 
 /* รูปใหญ่ */
 .main img {
-    width: 70%;
+    width: 65%;
     max-width: 900px;
-    height: 60%;
+    height: 55%;
     object-fit: cover;
     border-radius: 6px;
     box-shadow: 0 20px 50px rgba(0,0,0,0.7);
